sdk/cdn/arm-cdn/samples/v9/typescript/README.md
# client library samples for TypeScript

These sample programs show how to use the TypeScript client libraries for in some common scenarios.

| **File Name**                                                                                       | **Description**                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           |
| --------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| [afdCustomDomainsCreateSample.ts][afdcustomdomainscreatesample]                                     | Creates a new domain within the specified profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/AFDCustomDomains_Create.json                                                                                                                                                                                                                                                                                                                                           |
| [afdCustomDomainsDeleteSample.ts][afdcustomdomainsdeletesample]                                     | Deletes an existing AzureFrontDoor domain with the specified domain name under the specified subscription, resource group and profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/AFDCustomDomains_Delete.json                                                                                                                                                                                                                                                       |
| [afdCustomDomainsGetSample.ts][afdcustomdomainsgetsample]                                           | Gets an existing AzureFrontDoor domain with the specified domain name under the specified subscription, resource group and profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/AFDCustomDomains_Get.json                                                                                                                                                                                                                                                             |
| [afdCustomDomainsListByProfileSample.ts][afdcustomdomainslistbyprofilesample]                       | Lists existing AzureFrontDoor domains. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/AFDCustomDomains_ListByProfile.json                                                                                                                                                                                                                                                                                                                                                |
| [afdCustomDomainsRefreshValidationTokenSample.ts][afdcustomdomainsrefreshvalidationtokensample]     | Updates the domain validation token. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/AFDCustomDomains_RefreshValidationToken.json                                                                                                                                                                                                                                                                                                                                         |
| [afdCustomDomainsUpdateSample.ts][afdcustomdomainsupdatesample]                                     | Updates an existing domain within a profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/AFDCustomDomains_Update.json                                                                                                                                                                                                                                                                                                                                                 |
| [afdEndpointsCreateSample.ts][afdendpointscreatesample]                                             | Creates a new AzureFrontDoor endpoint with the specified endpoint name under the specified subscription, resource group and profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/AFDEndpoints_Create.json                                                                                                                                                                                                                                                             |
| [afdEndpointsDeleteSample.ts][afdendpointsdeletesample]                                             | Deletes an existing AzureFrontDoor endpoint with the specified endpoint name under the specified subscription, resource group and profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/AFDEndpoints_Delete.json                                                                                                                                                                                                                                                       |
| [afdEndpointsGetSample.ts][afdendpointsgetsample]                                                   | Gets an existing AzureFrontDoor endpoint with the specified endpoint name under the specified subscription, resource group and profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/AFDEndpoints_Get.json                                                                                                                                                                                                                                                             |
| [afdEndpointsListByProfileSample.ts][afdendpointslistbyprofilesample]                               | Lists existing AzureFrontDoor endpoints. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/AFDEndpoints_ListByProfile.json                                                                                                                                                                                                                                                                                                                                                  |
| [afdEndpointsListResourceUsageSample.ts][afdendpointslistresourceusagesample]                       | Checks the quota and actual usage of endpoints under the given Azure Front Door profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/AFDEndpoints_ListResourceUsage.json                                                                                                                                                                                                                                                                                              |
| [afdEndpointsPurgeContentSample.ts][afdendpointspurgecontentsample]                                 | Removes a content from AzureFrontDoor. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/AFDEndpoints_PurgeContent.json                                                                                                                                                                                                                                                                                                                                                     |
| [afdEndpointsUpdateSample.ts][afdendpointsupdatesample]                                             | Updates an existing AzureFrontDoor endpoint with the specified endpoint name under the specified subscription, resource group and profile. Only tags can be updated after creating an endpoint. To update origins, use the Update Origin operation. To update origin groups, use the Update Origin group operation. To update domains, use the Update Custom Domain operation. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/AFDEndpoints_Update.json                   |
| [afdEndpointsValidateCustomDomainSample.ts][afdendpointsvalidatecustomdomainsample]                 | Validates the custom domain mapping to ensure it maps to the correct Azure Front Door endpoint in DNS. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/AFDEndpoints_ValidateCustomDomain.json                                                                                                                                                                                                                                                                             |
| [afdOriginGroupsCreateSample.ts][afdorigingroupscreatesample]                                       | Creates a new origin group within the specified profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/AFDOriginGroups_Create.json                                                                                                                                                                                                                                                                                                                                      |
| [afdOriginGroupsDeleteSample.ts][afdorigingroupsdeletesample]                                       | Deletes an existing origin group within a profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/AFDOriginGroups_Delete.json                                                                                                                                                                                                                                                                                                                                            |
| [afdOriginGroupsGetSample.ts][afdorigingroupsgetsample]                                             | Gets an existing origin group within a profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/AFDOriginGroups_Get.json                                                                                                                                                                                                                                                                                                                                                  |
| [afdOriginGroupsListByProfileSample.ts][afdorigingroupslistbyprofilesample]                         | Lists all of the existing origin groups within a profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/AFDOriginGroups_ListByProfile.json                                                                                                                                                                                                                                                                                                                              |
| [afdOriginGroupsListResourceUsageSample.ts][afdorigingroupslistresourceusagesample]                 | Checks the quota and actual usage of endpoints under the given Azure Front Door profile.. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/AFDOriginGroups_ListResourceUsage.json                                                                                                                                                                                                                                                                                          |
| [afdOriginGroupsUpdateSample.ts][afdorigingroupsupdatesample]                                       | Updates an existing origin group within a profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/AFDOriginGroups_Update.json                                                                                                                                                                                                                                                                                                                                            |
| [afdOriginsCreateSample.ts][afdoriginscreatesample]                                                 | Creates a new origin within the specified origin group. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/AFDOrigins_Create.json                                                                                                                                                                                                                                                                                                                                            |
| [afdOriginsDeleteSample.ts][afdoriginsdeletesample]                                                 | Deletes an existing origin within an origin group. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/AFDOrigins_Delete.json                                                                                                                                                                                                                                                                                                                                                 |
| [afdOriginsGetSample.ts][afdoriginsgetsample]                                                       | Gets an existing origin within an origin group. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/AFDOrigins_Get.json                                                                                                                                                                                                                                                                                                                                                       |
| [afdOriginsListByOriginGroupSample.ts][afdoriginslistbyorigingroupsample]                           | Lists all of the existing origins within an origin group. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/AFDOrigins_ListByOriginGroup.json                                                                                                                                                                                                                                                                                                                               |
| [afdOriginsUpdateSample.ts][afdoriginsupdatesample]                                                 | Updates an existing origin within an origin group. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/AFDOrigins_Update.json                                                                                                                                                                                                                                                                                                                                                 |
| [afdProfilesCheckEndpointNameAvailabilitySample.ts][afdprofilescheckendpointnameavailabilitysample] | Check the availability of an afdx endpoint name, and return the globally unique endpoint host name. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/AFDProfiles_CheckEndpointNameAvailability.json                                                                                                                                                                                                                                                                        |
| [afdProfilesCheckHostNameAvailabilitySample.ts][afdprofilescheckhostnameavailabilitysample]         | Validates the custom domain mapping to ensure it maps to the correct Azure Front Door endpoint in DNS. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/AFDProfiles_CheckHostNameAvailability.json                                                                                                                                                                                                                                                                         |
| [afdProfilesListResourceUsageSample.ts][afdprofileslistresourceusagesample]                         | Checks the quota and actual usage of endpoints under the given Azure Front Door profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/AFDProfiles_ListResourceUsage.json                                                                                                                                                                                                                                                                                               |
| [afdProfilesUpgradeSample.ts][afdprofilesupgradesample]                                             | Upgrade a profile from Standard_AzureFrontDoor to Premium_AzureFrontDoor. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/AFDProfiles_Upgrade.json                                                                                                                                                                                                                                                                                                                        |
| [afdProfilesValidateSecretSample.ts][afdprofilesvalidatesecretsample]                               | Validate a Secret in the profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/AFDProfiles_ValidateSecret.json                                                                                                                                                                                                                                                                                                                                                         |
| [checkEndpointNameAvailabilitySample.ts][checkendpointnameavailabilitysample]                       | Check the availability of a resource name. This is needed for resources where name is globally unique, such as a afdx endpoint. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/CheckEndpointNameAvailability.json                                                                                                                                                                                                                                                        |
| [checkNameAvailabilitySample.ts][checknameavailabilitysample]                                       | Check the availability of a resource name. This is needed for resources where name is globally unique, such as a CDN endpoint. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/CheckNameAvailability.json                                                                                                                                                                                                                                                                 |
| [checkNameAvailabilityWithSubscriptionSample.ts][checknameavailabilitywithsubscriptionsample]       | Check the availability of a resource name. This is needed for resources where name is globally unique, such as a CDN endpoint. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/CheckNameAvailabilityWithSubscription.json                                                                                                                                                                                                                                                 |
| [customDomainsCreateSample.ts][customdomainscreatesample]                                           | Creates a new custom domain within an endpoint. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/CustomDomains_Create.json                                                                                                                                                                                                                                                                                                                                                 |
| [customDomainsDeleteSample.ts][customdomainsdeletesample]                                           | Deletes an existing custom domain within an endpoint. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/CustomDomains_Delete.json                                                                                                                                                                                                                                                                                                                                           |
| [customDomainsDisableCustomHttpsSample.ts][customdomainsdisablecustomhttpssample]                   | Disable https delivery of the custom domain. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/CustomDomains_DisableCustomHttps.json                                                                                                                                                                                                                                                                                                                                        |
| [customDomainsEnableCustomHttpsSample.ts][customdomainsenablecustomhttpssample]                     | Enable https delivery of the custom domain. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/CustomDomains_EnableCustomHttpsUsingCDNManagedCertificate.json                                                                                                                                                                                                                                                                                                                |
| [customDomainsGetSample.ts][customdomainsgetsample]                                                 | Gets an existing custom domain within an endpoint. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/CustomDomains_Get.json                                                                                                                                                                                                                                                                                                                                                 |
| [customDomainsListByEndpointSample.ts][customdomainslistbyendpointsample]                           | Lists all of the existing custom domains within an endpoint. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/CustomDomains_ListByEndpoint.json                                                                                                                                                                                                                                                                                                                            |
| [edgeNodesListSample.ts][edgenodeslistsample]                                                       | Edgenodes are the global Point of Presence (POP) locations used to deliver CDN content to end users. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/EdgeNodes_List.json                                                                                                                                                                                                                                                                                                  |
| [endpointsCreateSample.ts][endpointscreatesample]                                                   | Creates a new CDN endpoint with the specified endpoint name under the specified subscription, resource group and profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/Endpoints_Create.json                                                                                                                                                                                                                                                                           |
| [endpointsDeleteSample.ts][endpointsdeletesample]                                                   | Deletes an existing CDN endpoint with the specified endpoint name under the specified subscription, resource group and profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/Endpoints_Delete.json                                                                                                                                                                                                                                                                     |
| [endpointsGetSample.ts][endpointsgetsample]                                                         | Gets an existing CDN endpoint with the specified endpoint name under the specified subscription, resource group and profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/Endpoints_Get.json                                                                                                                                                                                                                                                                           |
| [endpointsListByProfileSample.ts][endpointslistbyprofilesample]                                     | Lists existing CDN endpoints. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/Endpoints_ListByProfile.json                                                                                                                                                                                                                                                                                                                                                                |
| [endpointsListResourceUsageSample.ts][endpointslistresourceusagesample]                             | Checks the quota and usage of geo filters and custom domains under the given endpoint. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/Endpoints_ListResourceUsage.json                                                                                                                                                                                                                                                                                                   |
| [endpointsLoadContentSample.ts][endpointsloadcontentsample]                                         | Pre-loads a content to CDN. Available for Verizon Profiles. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/Endpoints_LoadContent.json                                                                                                                                                                                                                                                                                                                                    |
| [endpointsPurgeContentSample.ts][endpointspurgecontentsample]                                       | Removes a content from CDN. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/Endpoints_PurgeContent.json                                                                                                                                                                                                                                                                                                                                                                   |
| [endpointsStartSample.ts][endpointsstartsample]                                                     | Starts an existing CDN endpoint that is on a stopped state. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/Endpoints_Start.json                                                                                                                                                                                                                                                                                                                                          |
| [endpointsStopSample.ts][endpointsstopsample]                                                       | Stops an existing running CDN endpoint. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/Endpoints_Stop.json                                                                                                                                                                                                                                                                                                                                                               |
| [endpointsUpdateSample.ts][endpointsupdatesample]                                                   | Updates an existing CDN endpoint with the specified endpoint name under the specified subscription, resource group and profile. Only tags can be updated after creating an endpoint. To update origins, use the Update Origin operation. To update origin groups, use the Update Origin group operation. To update custom domains, use the Update Custom Domain operation. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/Endpoints_Update.json                          |
| [endpointsValidateCustomDomainSample.ts][endpointsvalidatecustomdomainsample]                       | Validates the custom domain mapping to ensure it maps to the correct CDN endpoint in DNS. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/Endpoints_ValidateCustomDomain.json                                                                                                                                                                                                                                                                                             |
| [logAnalyticsGetLogAnalyticsLocationsSample.ts][loganalyticsgetloganalyticslocationssample]         | Get all available location names for AFD log analytics report. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/LogAnalytics_GetLogAnalyticsLocations.json                                                                                                                                                                                                                                                                                                                 |
| [logAnalyticsGetLogAnalyticsMetricsSample.ts][loganalyticsgetloganalyticsmetricssample]             | Get log report for AFD profile x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/LogAnalytics_GetLogAnalyticsMetrics.json                                                                                                                                                                                                                                                                                                                                                   |
| [logAnalyticsGetLogAnalyticsRankingsSample.ts][loganalyticsgetloganalyticsrankingssample]           | Get log analytics ranking report for AFD profile x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/LogAnalytics_GetLogAnalyticsRankings.json                                                                                                                                                                                                                                                                                                                                |
| [logAnalyticsGetLogAnalyticsResourcesSample.ts][loganalyticsgetloganalyticsresourcessample]         | Get all endpoints and custom domains available for AFD log report x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/LogAnalytics_GetLogAnalyticsResources.json                                                                                                                                                                                                                                                                                                              |
| [logAnalyticsGetWafLogAnalyticsMetricsSample.ts][loganalyticsgetwafloganalyticsmetricssample]       | Get Waf related log analytics report for AFD profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/LogAnalytics_GetWafLogAnalyticsMetrics.json                                                                                                                                                                                                                                                                                                                         |
| [logAnalyticsGetWafLogAnalyticsRankingsSample.ts][loganalyticsgetwafloganalyticsrankingssample]     | Get WAF log analytics charts for AFD profile x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/LogAnalytics_GetWafLogAnalyticsRankings.json                                                                                                                                                                                                                                                                                                                                 |
| [managedRuleSetsListSample.ts][managedrulesetslistsample]                                           | Lists all available managed rule sets. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/WafListManagedRuleSets.json                                                                                                                                                                                                                                                                                                                                                        |
| [operationsListSample.ts][operationslistsample]                                                     | Lists all of the available CDN REST API operations. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/Operations_List.json                                                                                                                                                                                                                                                                                                                                                  |
| [originGroupsCreateSample.ts][origingroupscreatesample]                                             | Creates a new origin group within the specified endpoint. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/OriginGroups_Create.json                                                                                                                                                                                                                                                                                                                                        |
| [originGroupsDeleteSample.ts][origingroupsdeletesample]                                             | Deletes an existing origin group within an endpoint. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/OriginGroups_Delete.json                                                                                                                                                                                                                                                                                                                                             |
| [originGroupsGetSample.ts][origingroupsgetsample]                                                   | Gets an existing origin group within an endpoint. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/OriginGroups_Get.json                                                                                                                                                                                                                                                                                                                                                   |
| [originGroupsListByEndpointSample.ts][origingroupslistbyendpointsample]                             | Lists all of the existing origin groups within an endpoint. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/OriginGroups_ListByEndpoint.json                                                                                                                                                                                                                                                                                                                              |
| [originGroupsUpdateSample.ts][origingroupsupdatesample]                                             | Updates an existing origin group within an endpoint. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/OriginGroups_Update.json                                                                                                                                                                                                                                                                                                                                             |
| [originsCreateSample.ts][originscreatesample]                                                       | Creates a new origin within the specified endpoint. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/Origins_Create.json                                                                                                                                                                                                                                                                                                                                                   |
| [originsDeleteSample.ts][originsdeletesample]                                                       | Deletes an existing origin within an endpoint. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/Origins_Delete.json                                                                                                                                                                                                                                                                                                                                                        |
| [originsGetSample.ts][originsgetsample]                                                             | Gets an existing origin within an endpoint. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/Origins_Get.json                                                                                                                                                                                                                                                                                                                                                              |
| [originsListByEndpointSample.ts][originslistbyendpointsample]                                       | Lists all of the existing origins within an endpoint. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/Origins_ListByEndpoint.json                                                                                                                                                                                                                                                                                                                                         |
| [originsUpdateSample.ts][originsupdatesample]                                                       | Updates an existing origin within an endpoint. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/Origins_Update.json                                                                                                                                                                                                                                                                                                                                                        |
| [policiesCreateOrUpdateSample.ts][policiescreateorupdatesample]                                     | Create or update policy with specified rule set name within a resource group. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/WafPolicyCreateOrUpdate.json                                                                                                                                                                                                                                                                                                                |
| [policiesDeleteSample.ts][policiesdeletesample]                                                     | Deletes Policy x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/WafPolicyDelete.json                                                                                                                                                                                                                                                                                                                                                                                       |
| [policiesGetSample.ts][policiesgetsample]                                                           | Retrieve protection policy with specified name within a resource group. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/WafPolicyGet.json                                                                                                                                                                                                                                                                                                                                 |
| [policiesListSample.ts][policieslistsample]                                                         | Lists all of the protection policies within a resource group. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/WafListPolicies.json                                                                                                                                                                                                                                                                                                                                        |
| [policiesUpdateSample.ts][policiesupdatesample]                                                     | Update an existing CdnWebApplicationFirewallPolicy with the specified policy name under the specified subscription and resource group x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/WafPatchPolicy.json                                                                                                                                                                                                                                                                 |
| [profilesCanMigrateSample.ts][profilescanmigratesample]                                             | Checks if CDN profile can be migrated to Azure Frontdoor(Standard/Premium) profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/Profiles_CanMigrate.json                                                                                                                                                                                                                                                                                                              |
| [profilesCreateSample.ts][profilescreatesample]                                                     | Creates a new Azure Front Door Standard or Azure Front Door Premium or CDN profile with a profile name under the specified subscription and resource group. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/Profiles_Create.json                                                                                                                                                                                                                                          |
| [profilesDeleteSample.ts][profilesdeletesample]                                                     | Deletes an existing Azure Front Door Standard or Azure Front Door Premium or CDN profile with the specified parameters. Deleting a profile will result in the deletion of all of the sub-resources including endpoints, origins and custom domains. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/Profiles_Delete.json                                                                                                                                                  |
| [profilesGenerateSsoUriSample.ts][profilesgeneratessourisample]                                     | Generates a dynamic SSO URI used to sign in to the CDN supplemental portal. Supplemental portal is used to configure advanced feature capabilities that are not yet available in the Azure portal, such as core reports in a standard profile; rules engine, advanced HTTP reports, and real-time stats and alerts in a premium profile. The SSO URI changes approximately every 10 minutes. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/Profiles_GenerateSsoUri.json |
| [profilesGetSample.ts][profilesgetsample]                                                           | Gets an Azure Front Door Standard or Azure Front Door Premium or CDN profile with the specified profile name under the specified subscription and resource group. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/Profiles_Get.json                                                                                                                                                                                                                                       |
| [profilesListByResourceGroupSample.ts][profileslistbyresourcegroupsample]                           | Lists all of the Azure Front Door Standard, Azure Front Door Premium, and CDN profiles within a resource group. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/Profiles_ListByResourceGroup.json                                                                                                                                                                                                                                                                         |
| [profilesListResourceUsageSample.ts][profileslistresourceusagesample]                               | Checks the quota and actual usage of endpoints under the given Azure Front Door Standard or Azure Front Door Premium or CDN profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/Profiles_ListResourceUsage.json                                                                                                                                                                                                                                                      |
| [profilesListSample.ts][profileslistsample]                                                         | Lists all of the Azure Front Door Standard, Azure Front Door Premium, and CDN profiles within an Azure subscription. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/Profiles_List.json                                                                                                                                                                                                                                                                                   |
| [profilesListSupportedOptimizationTypesSample.ts][profileslistsupportedoptimizationtypessample]     | Gets the supported optimization types for the current profile. A user can create an endpoint with an optimization type from the listed values. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/Profiles_ListSupportedOptimizationTypes.json                                                                                                                                                                                                                               |
| [profilesMigrateSample.ts][profilesmigratesample]                                                   | Migrate the CDN profile to Azure Frontdoor(Standard/Premium) profile. The change need to be committed after this. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/Profiles_Migrate.json                                                                                                                                                                                                                                                                                   |
| [profilesMigrationCommitSample.ts][profilesmigrationcommitsample]                                   | Commit the migrated Azure Frontdoor(Standard/Premium) profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/Profiles_MigrationCommit.json                                                                                                                                                                                                                                                                                                                              |
| [profilesUpdateSample.ts][profilesupdatesample]                                                     | Updates an existing Azure Front Door Standard or Azure Front Door Premium or CDN profile with the specified profile name under the specified subscription and resource group. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/Profiles_Update.json                                                                                                                                                                                                                        |
| [resourceUsageListSample.ts][resourceusagelistsample]                                               | Check the quota and actual usage of the CDN profiles under the given subscription. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/ResourceUsage_List.json                                                                                                                                                                                                                                                                                                                |
| [routesCreateSample.ts][routescreatesample]                                                         | Creates a new route with the specified route name under the specified subscription, resource group, profile, and AzureFrontDoor endpoint. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/Routes_Create.json                                                                                                                                                                                                                                                              |
| [routesDeleteSample.ts][routesdeletesample]                                                         | Deletes an existing route with the specified route name under the specified subscription, resource group, profile, and AzureFrontDoor endpoint. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/Routes_Delete.json                                                                                                                                                                                                                                                        |
| [routesGetSample.ts][routesgetsample]                                                               | Gets an existing route with the specified route name under the specified subscription, resource group, profile, and AzureFrontDoor endpoint. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/Routes_Get.json                                                                                                                                                                                                                                                              |
| [routesListByEndpointSample.ts][routeslistbyendpointsample]                                         | Lists all of the existing origins within a profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/Routes_ListByEndpoint.json                                                                                                                                                                                                                                                                                                                                            |
| [routesUpdateSample.ts][routesupdatesample]                                                         | Updates an existing route with the specified route name under the specified subscription, resource group, profile, and AzureFrontDoor endpoint. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/Routes_Update.json                                                                                                                                                                                                                                                        |
| [ruleSetsCreateSample.ts][rulesetscreatesample]                                                     | Creates a new rule set within the specified profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/RuleSets_Create.json                                                                                                                                                                                                                                                                                                                                                 |
| [ruleSetsDeleteSample.ts][rulesetsdeletesample]                                                     | Deletes an existing AzureFrontDoor rule set with the specified rule set name under the specified subscription, resource group and profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/RuleSets_Delete.json                                                                                                                                                                                                                                                           |
| [ruleSetsGetSample.ts][rulesetsgetsample]                                                           | Gets an existing AzureFrontDoor rule set with the specified rule set name under the specified subscription, resource group and profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/RuleSets_Get.json                                                                                                                                                                                                                                                                 |
| [ruleSetsListByProfileSample.ts][rulesetslistbyprofilesample]                                       | Lists existing AzureFrontDoor rule sets within a profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/RuleSets_ListByProfile.json                                                                                                                                                                                                                                                                                                                                     |
| [ruleSetsListResourceUsageSample.ts][rulesetslistresourceusagesample]                               | Checks the quota and actual usage of endpoints under the given Azure Front Door profile.. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/RuleSets_ListResourceUsage.json                                                                                                                                                                                                                                                                                                 |
| [rulesCreateSample.ts][rulescreatesample]                                                           | Creates a new delivery rule within the specified rule set. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/Rules_Create.json                                                                                                                                                                                                                                                                                                                                              |
| [rulesDeleteSample.ts][rulesdeletesample]                                                           | Deletes an existing delivery rule within a rule set. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/Rules_Delete.json                                                                                                                                                                                                                                                                                                                                                    |
| [rulesGetSample.ts][rulesgetsample]                                                                 | Gets an existing delivery rule within a rule set. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/Rules_Get.json                                                                                                                                                                                                                                                                                                                                                          |
| [rulesListByRuleSetSample.ts][ruleslistbyrulesetsample]                                             | Lists all of the existing delivery rules within a rule set. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/Rules_ListByRuleSet.json                                                                                                                                                                                                                                                                                                                                      |
| [rulesUpdateSample.ts][rulesupdatesample]                                                           | Updates an existing delivery rule within a rule set. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/Rules_Update.json                                                                                                                                                                                                                                                                                                                                                    |
| [secretsCreateSample.ts][secretscreatesample]                                                       | Creates a new Secret within the specified profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/Secrets_Create.json                                                                                                                                                                                                                                                                                                                                                    |
| [secretsDeleteSample.ts][secretsdeletesample]                                                       | Deletes an existing Secret within profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/Secrets_Delete.json                                                                                                                                                                                                                                                                                                                                                            |
| [secretsGetSample.ts][secretsgetsample]                                                             | Gets an existing Secret within a profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/Secrets_Get.json                                                                                                                                                                                                                                                                                                                                                                |
| [secretsListByProfileSample.ts][secretslistbyprofilesample]                                         | Lists existing AzureFrontDoor secrets. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/Secrets_ListByProfile.json                                                                                                                                                                                                                                                                                                                                                         |
| [securityPoliciesCreateSample.ts][securitypoliciescreatesample]                                     | Creates a new security policy within the specified profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/SecurityPolicies_Create.json                                                                                                                                                                                                                                                                                                                                  |
| [securityPoliciesDeleteSample.ts][securitypoliciesdeletesample]                                     | Deletes an existing security policy within profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/SecurityPolicies_Delete.json                                                                                                                                                                                                                                                                                                                                          |
| [securityPoliciesGetSample.ts][securitypoliciesgetsample]                                           | Gets an existing security policy within a profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/SecurityPolicies_Get.json                                                                                                                                                                                                                                                                                                                                              |
| [securityPoliciesListByProfileSample.ts][securitypolicieslistbyprofilesample]                       | Lists security policies associated with the profile x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/SecurityPolicies_ListByProfile.json                                                                                                                                                                                                                                                                                                                                   |
| [securityPoliciesPatchSample.ts][securitypoliciespatchsample]                                       | Updates an existing security policy within a profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/SecurityPolicies_Patch.json                                                                                                                                                                                                                                                                                                                                         |
| [validateProbeSample.ts][validateprobesample]                                                       | Check if the probe path is a valid path and the file can be accessed. Probe path is the path to a file hosted on the origin server to help accelerate the delivery of dynamic content via the CDN endpoint. This path is relative to the origin path specified in the endpoint configuration. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2024-02-01/examples/ValidateProbe.json                                                                                                          |

## Prerequisites

The sample programs are compatible with [LTS versions of Node.js](https://github.com/nodejs/release#release-schedule).

Before running the samples in Node, they must be compiled to JavaScript using the TypeScript compiler. For more information on TypeScript, see the [TypeScript documentation][typescript]. Install the TypeScript compiler using:

```bash
npm install -g typescript
```

You need [an Azure subscription][freesub] to run these sample programs.

Samples retrieve credentials to access the service endpoint from environment variables. Alternatively, edit the source code to include the appropriate credentials. See each individual sample for details on which environment variables/credentials it requires to function.

Adapting the samples to run in the browser may require some additional consideration. For details, please see the [package README][package].

## Setup

To run the samples using the published version of the package:

1. Install the dependencies using `npm`:

```bash
npm install
```

2. Compile the samples:

```bash
npm run build
```

3. Edit the file `sample.env`, adding the correct credentials to access the Azure service and run the samples. Then rename the file from `sample.env` to just `.env`. The sample programs will read this file automatically.

4. Run whichever samples you like (note that some samples may require additional setup, see the table above):

```bash
node dist/afdCustomDomainsCreateSample.js
```

Alternatively, run a single sample with the correct environment variables set (setting up the `.env` file is not required if you do this), for example (cross-platform):

```bash
npx dev-tool run vendored cross-env CDN_SUBSCRIPTION_ID="<cdn subscription id>" CDN_RESOURCE_GROUP="<cdn resource group>" node dist/afdCustomDomainsCreateSample.js
```

## Next Steps

Take a look at our [API Documentation][apiref] for more information about the APIs that are available in the clients.

[afdcustomdomainscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/afdCustomDomainsCreateSample.ts
[afdcustomdomainsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/afdCustomDomainsDeleteSample.ts
[afdcustomdomainsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/afdCustomDomainsGetSample.ts
[afdcustomdomainslistbyprofilesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/afdCustomDomainsListByProfileSample.ts
[afdcustomdomainsrefreshvalidationtokensample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/afdCustomDomainsRefreshValidationTokenSample.ts
[afdcustomdomainsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/afdCustomDomainsUpdateSample.ts
[afdendpointscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/afdEndpointsCreateSample.ts
[afdendpointsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/afdEndpointsDeleteSample.ts
[afdendpointsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/afdEndpointsGetSample.ts
[afdendpointslistbyprofilesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/afdEndpointsListByProfileSample.ts
[afdendpointslistresourceusagesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/afdEndpointsListResourceUsageSample.ts
[afdendpointspurgecontentsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/afdEndpointsPurgeContentSample.ts
[afdendpointsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/afdEndpointsUpdateSample.ts
[afdendpointsvalidatecustomdomainsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/afdEndpointsValidateCustomDomainSample.ts
[afdorigingroupscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/afdOriginGroupsCreateSample.ts
[afdorigingroupsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/afdOriginGroupsDeleteSample.ts
[afdorigingroupsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/afdOriginGroupsGetSample.ts
[afdorigingroupslistbyprofilesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/afdOriginGroupsListByProfileSample.ts
[afdorigingroupslistresourceusagesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/afdOriginGroupsListResourceUsageSample.ts
[afdorigingroupsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/afdOriginGroupsUpdateSample.ts
[afdoriginscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/afdOriginsCreateSample.ts
[afdoriginsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/afdOriginsDeleteSample.ts
[afdoriginsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/afdOriginsGetSample.ts
[afdoriginslistbyorigingroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/afdOriginsListByOriginGroupSample.ts
[afdoriginsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/afdOriginsUpdateSample.ts
[afdprofilescheckendpointnameavailabilitysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/afdProfilesCheckEndpointNameAvailabilitySample.ts
[afdprofilescheckhostnameavailabilitysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/afdProfilesCheckHostNameAvailabilitySample.ts
[afdprofileslistresourceusagesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/afdProfilesListResourceUsageSample.ts
[afdprofilesupgradesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/afdProfilesUpgradeSample.ts
[afdprofilesvalidatesecretsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/afdProfilesValidateSecretSample.ts
[checkendpointnameavailabilitysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/checkEndpointNameAvailabilitySample.ts
[checknameavailabilitysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/checkNameAvailabilitySample.ts
[checknameavailabilitywithsubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/checkNameAvailabilityWithSubscriptionSample.ts
[customdomainscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/customDomainsCreateSample.ts
[customdomainsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/customDomainsDeleteSample.ts
[customdomainsdisablecustomhttpssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/customDomainsDisableCustomHttpsSample.ts
[customdomainsenablecustomhttpssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/customDomainsEnableCustomHttpsSample.ts
[customdomainsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/customDomainsGetSample.ts
[customdomainslistbyendpointsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/customDomainsListByEndpointSample.ts
[edgenodeslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/edgeNodesListSample.ts
[endpointscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/endpointsCreateSample.ts
[endpointsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/endpointsDeleteSample.ts
[endpointsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/endpointsGetSample.ts
[endpointslistbyprofilesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/endpointsListByProfileSample.ts
[endpointslistresourceusagesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/endpointsListResourceUsageSample.ts
[endpointsloadcontentsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/endpointsLoadContentSample.ts
[endpointspurgecontentsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/endpointsPurgeContentSample.ts
[endpointsstartsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/endpointsStartSample.ts
[endpointsstopsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/endpointsStopSample.ts
[endpointsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/endpointsUpdateSample.ts
[endpointsvalidatecustomdomainsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/endpointsValidateCustomDomainSample.ts
[loganalyticsgetloganalyticslocationssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/logAnalyticsGetLogAnalyticsLocationsSample.ts
[loganalyticsgetloganalyticsmetricssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/logAnalyticsGetLogAnalyticsMetricsSample.ts
[loganalyticsgetloganalyticsrankingssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/logAnalyticsGetLogAnalyticsRankingsSample.ts
[loganalyticsgetloganalyticsresourcessample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/logAnalyticsGetLogAnalyticsResourcesSample.ts
[loganalyticsgetwafloganalyticsmetricssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/logAnalyticsGetWafLogAnalyticsMetricsSample.ts
[loganalyticsgetwafloganalyticsrankingssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/logAnalyticsGetWafLogAnalyticsRankingsSample.ts
[managedrulesetslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/managedRuleSetsListSample.ts
[operationslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/operationsListSample.ts
[origingroupscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/originGroupsCreateSample.ts
[origingroupsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/originGroupsDeleteSample.ts
[origingroupsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/originGroupsGetSample.ts
[origingroupslistbyendpointsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/originGroupsListByEndpointSample.ts
[origingroupsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/originGroupsUpdateSample.ts
[originscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/originsCreateSample.ts
[originsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/originsDeleteSample.ts
[originsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/originsGetSample.ts
[originslistbyendpointsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/originsListByEndpointSample.ts
[originsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/originsUpdateSample.ts
[policiescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/policiesCreateOrUpdateSample.ts
[policiesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/policiesDeleteSample.ts
[policiesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/policiesGetSample.ts
[policieslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/policiesListSample.ts
[policiesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/policiesUpdateSample.ts
[profilescanmigratesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/profilesCanMigrateSample.ts
[profilescreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/profilesCreateSample.ts
[profilesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/profilesDeleteSample.ts
[profilesgeneratessourisample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/profilesGenerateSsoUriSample.ts
[profilesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/profilesGetSample.ts
[profileslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/profilesListByResourceGroupSample.ts
[profileslistresourceusagesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/profilesListResourceUsageSample.ts
[profileslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/profilesListSample.ts
[profileslistsupportedoptimizationtypessample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/profilesListSupportedOptimizationTypesSample.ts
[profilesmigratesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/profilesMigrateSample.ts
[profilesmigrationcommitsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/profilesMigrationCommitSample.ts
[profilesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/profilesUpdateSample.ts
[resourceusagelistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/resourceUsageListSample.ts
[routescreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/routesCreateSample.ts
[routesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/routesDeleteSample.ts
[routesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/routesGetSample.ts
[routeslistbyendpointsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/routesListByEndpointSample.ts
[routesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/routesUpdateSample.ts
[rulesetscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/ruleSetsCreateSample.ts
[rulesetsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/ruleSetsDeleteSample.ts
[rulesetsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/ruleSetsGetSample.ts
[rulesetslistbyprofilesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/ruleSetsListByProfileSample.ts
[rulesetslistresourceusagesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/ruleSetsListResourceUsageSample.ts
[rulescreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/rulesCreateSample.ts
[rulesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/rulesDeleteSample.ts
[rulesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/rulesGetSample.ts
[ruleslistbyrulesetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/rulesListByRuleSetSample.ts
[rulesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/rulesUpdateSample.ts
[secretscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/secretsCreateSample.ts
[secretsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/secretsDeleteSample.ts
[secretsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/secretsGetSample.ts
[secretslistbyprofilesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/secretsListByProfileSample.ts
[securitypoliciescreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/securityPoliciesCreateSample.ts
[securitypoliciesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/securityPoliciesDeleteSample.ts
[securitypoliciesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/securityPoliciesGetSample.ts
[securitypolicieslistbyprofilesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/securityPoliciesListByProfileSample.ts
[securitypoliciespatchsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/securityPoliciesPatchSample.ts
[validateprobesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v9/typescript/src/validateProbeSample.ts
[apiref]: https://learn.microsoft.com/javascript/api/@azure/arm-cdn?view=azure-node-preview
[freesub]: https://azure.microsoft.com/free/
[package]: https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/cdn/arm-cdn/README.md
[typescript]: https://www.typescriptlang.org/docs/home.html
