sdk/cdn/arm-cdn/samples/v10/typescript/README.md
# @azure/arm-cdn client library samples for TypeScript

These sample programs show how to use the TypeScript client libraries for @azure/arm-cdn in some common scenarios.

| **File Name**                                                                                       | **Description**                                                                                                                                                                                                                                                                                                                                                                                                                                          |
| --------------------------------------------------------------------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| [afdCustomDomainsCreateSample.ts][afdcustomdomainscreatesample]                                     | creates a new domain within the specified profile. x-ms-original-file: 2026-07-01/AFDCustomDomains_Create.json                                                                                                                                                                                                                                                                                                                                           |
| [afdCustomDomainsDeleteSample.ts][afdcustomdomainsdeletesample]                                     | deletes an existing AzureFrontDoor domain with the specified domain name under the specified subscription, resource group and profile. x-ms-original-file: 2026-07-01/AFDCustomDomains_Delete.json                                                                                                                                                                                                                                                       |
| [afdCustomDomainsGetSample.ts][afdcustomdomainsgetsample]                                           | gets an existing AzureFrontDoor domain with the specified domain name under the specified subscription, resource group and profile. x-ms-original-file: 2026-07-01/AFDCustomDomains_Get.json                                                                                                                                                                                                                                                             |
| [afdCustomDomainsListByProfileSample.ts][afdcustomdomainslistbyprofilesample]                       | lists existing AzureFrontDoor domains. x-ms-original-file: 2026-07-01/AFDCustomDomains_ListByProfile.json                                                                                                                                                                                                                                                                                                                                                |
| [afdCustomDomainsRefreshValidationTokenSample.ts][afdcustomdomainsrefreshvalidationtokensample]     | updates the domain validation token. x-ms-original-file: 2026-07-01/AFDCustomDomains_RefreshValidationToken.json                                                                                                                                                                                                                                                                                                                                         |
| [afdCustomDomainsUpdateSample.ts][afdcustomdomainsupdatesample]                                     | updates an existing domain within a profile. x-ms-original-file: 2026-07-01/AFDCustomDomains_Update.json                                                                                                                                                                                                                                                                                                                                                 |
| [afdEndpointsCreateSample.ts][afdendpointscreatesample]                                             | creates a new AzureFrontDoor endpoint with the specified endpoint name under the specified subscription, resource group and profile. x-ms-original-file: 2026-07-01/AFDEndpoints_Create.json                                                                                                                                                                                                                                                             |
| [afdEndpointsDeleteSample.ts][afdendpointsdeletesample]                                             | deletes an existing AzureFrontDoor endpoint with the specified endpoint name under the specified subscription, resource group and profile. x-ms-original-file: 2026-07-01/AFDEndpoints_Delete.json                                                                                                                                                                                                                                                       |
| [afdEndpointsGetSample.ts][afdendpointsgetsample]                                                   | gets an existing AzureFrontDoor endpoint with the specified endpoint name under the specified subscription, resource group and profile. x-ms-original-file: 2026-07-01/AFDEndpoints_Get.json                                                                                                                                                                                                                                                             |
| [afdEndpointsListByProfileSample.ts][afdendpointslistbyprofilesample]                               | lists existing AzureFrontDoor endpoints. x-ms-original-file: 2026-07-01/AFDEndpoints_ListByProfile.json                                                                                                                                                                                                                                                                                                                                                  |
| [afdEndpointsListResourceUsageSample.ts][afdendpointslistresourceusagesample]                       | checks the quota and actual usage of endpoints under the given Azure Front Door profile. x-ms-original-file: 2026-07-01/AFDEndpoints_ListResourceUsage.json                                                                                                                                                                                                                                                                                              |
| [afdEndpointsPurgeContentSample.ts][afdendpointspurgecontentsample]                                 | removes a content from AzureFrontDoor. x-ms-original-file: 2026-07-01/AFDEndpoints_PurgeContent.json                                                                                                                                                                                                                                                                                                                                                     |
| [afdEndpointsUpdateSample.ts][afdendpointsupdatesample]                                             | updates an existing AzureFrontDoor endpoint with the specified endpoint name under the specified subscription, resource group and profile. Only tags can be updated after creating an endpoint. To update origins, use the Update Origin operation. To update origin groups, use the Update Origin group operation. To update domains, use the Update Custom Domain operation. x-ms-original-file: 2026-07-01/AFDEndpoints_Update.json                   |
| [afdEndpointsValidateCustomDomainSample.ts][afdendpointsvalidatecustomdomainsample]                 | validates the custom domain mapping to ensure it maps to the correct Azure Front Door endpoint in DNS. x-ms-original-file: 2026-07-01/AFDEndpoints_ValidateCustomDomain.json                                                                                                                                                                                                                                                                             |
| [afdOriginGroupsCreateSample.ts][afdorigingroupscreatesample]                                       | creates a new origin group within the specified profile. x-ms-original-file: 2026-07-01/AFDOriginGroups_Create.json                                                                                                                                                                                                                                                                                                                                      |
| [afdOriginGroupsDeleteSample.ts][afdorigingroupsdeletesample]                                       | deletes an existing origin group within a profile. x-ms-original-file: 2026-07-01/AFDOriginGroups_Delete.json                                                                                                                                                                                                                                                                                                                                            |
| [afdOriginGroupsGetSample.ts][afdorigingroupsgetsample]                                             | gets an existing origin group within a profile. x-ms-original-file: 2026-07-01/AFDOriginGroups_Get.json                                                                                                                                                                                                                                                                                                                                                  |
| [afdOriginGroupsListByProfileSample.ts][afdorigingroupslistbyprofilesample]                         | lists all of the existing origin groups within a profile. x-ms-original-file: 2026-07-01/AFDOriginGroups_ListByProfile.json                                                                                                                                                                                                                                                                                                                              |
| [afdOriginGroupsListResourceUsageSample.ts][afdorigingroupslistresourceusagesample]                 | checks the quota and actual usage of endpoints under the given Azure Front Door profile. x-ms-original-file: 2026-07-01/AFDOriginGroups_ListResourceUsage.json                                                                                                                                                                                                                                                                                           |
| [afdOriginGroupsUpdateSample.ts][afdorigingroupsupdatesample]                                       | updates an existing origin group within a profile. x-ms-original-file: 2026-07-01/AFDOriginGroups_Update.json                                                                                                                                                                                                                                                                                                                                            |
| [afdOriginsCreateSample.ts][afdoriginscreatesample]                                                 | creates a new origin within the specified origin group. x-ms-original-file: 2026-07-01/AFDOrigins_Create.json                                                                                                                                                                                                                                                                                                                                            |
| [afdOriginsDeleteSample.ts][afdoriginsdeletesample]                                                 | deletes an existing origin within an origin group. x-ms-original-file: 2026-07-01/AFDOrigins_Delete.json                                                                                                                                                                                                                                                                                                                                                 |
| [afdOriginsGetSample.ts][afdoriginsgetsample]                                                       | gets an existing origin within an origin group. x-ms-original-file: 2026-07-01/AFDOrigins_Get.json                                                                                                                                                                                                                                                                                                                                                       |
| [afdOriginsListByOriginGroupSample.ts][afdoriginslistbyorigingroupsample]                           | lists all of the existing origins within an origin group. x-ms-original-file: 2026-07-01/AFDOrigins_ListByOriginGroup.json                                                                                                                                                                                                                                                                                                                               |
| [afdOriginsUpdateSample.ts][afdoriginsupdatesample]                                                 | updates an existing origin within an origin group. x-ms-original-file: 2026-07-01/AFDOrigins_Update.json                                                                                                                                                                                                                                                                                                                                                 |
| [afdProfilesCheckEndpointNameAvailabilitySample.ts][afdprofilescheckendpointnameavailabilitysample] | check the availability of an afdx endpoint name, and return the globally unique endpoint host name. x-ms-original-file: 2026-07-01/AFDProfiles_CheckEndpointNameAvailability.json                                                                                                                                                                                                                                                                        |
| [afdProfilesCheckHostNameAvailabilitySample.ts][afdprofilescheckhostnameavailabilitysample]         | validates the custom domain mapping to ensure it maps to the correct Azure Front Door endpoint in DNS. x-ms-original-file: 2026-07-01/AFDProfiles_CheckHostNameAvailability.json                                                                                                                                                                                                                                                                         |
| [afdProfilesListResourceUsageSample.ts][afdprofileslistresourceusagesample]                         | checks the quota and actual usage of endpoints under the given Azure Front Door profile. x-ms-original-file: 2026-07-01/AFDProfiles_ListResourceUsage.json                                                                                                                                                                                                                                                                                               |
| [afdProfilesUpgradeSample.ts][afdprofilesupgradesample]                                             | upgrade a profile from Standard_AzureFrontDoor to Premium_AzureFrontDoor. x-ms-original-file: 2026-07-01/AFDProfiles_Upgrade.json                                                                                                                                                                                                                                                                                                                        |
| [afdProfilesValidateSecretSample.ts][afdprofilesvalidatesecretsample]                               | validate a Secret in the profile. x-ms-original-file: 2026-07-01/AFDProfiles_ValidateSecret.json                                                                                                                                                                                                                                                                                                                                                         |
| [checkEndpointNameAvailabilitySample.ts][checkendpointnameavailabilitysample]                       | check the availability of a resource name. This is needed for resources where name is globally unique, such as a afdx endpoint. x-ms-original-file: 2026-07-01/CheckEndpointNameAvailability.json                                                                                                                                                                                                                                                        |
| [checkNameAvailabilitySample.ts][checknameavailabilitysample]                                       | check the availability of a resource name. This is needed for resources where name is globally unique, such as a CDN endpoint. x-ms-original-file: 2026-07-01/CheckNameAvailability.json                                                                                                                                                                                                                                                                 |
| [checkNameAvailabilityWithSubscriptionSample.ts][checknameavailabilitywithsubscriptionsample]       | check the availability of a resource name. This is needed for resources where name is globally unique, such as a CDN endpoint. x-ms-original-file: 2026-07-01/CheckNameAvailabilityWithSubscription.json                                                                                                                                                                                                                                                 |
| [customDomainsCreateSample.ts][customdomainscreatesample]                                           | creates a new custom domain within an endpoint. x-ms-original-file: 2026-07-01/CustomDomains_Create.json                                                                                                                                                                                                                                                                                                                                                 |
| [customDomainsDeleteSample.ts][customdomainsdeletesample]                                           | deletes an existing custom domain within an endpoint. x-ms-original-file: 2026-07-01/CustomDomains_Delete.json                                                                                                                                                                                                                                                                                                                                           |
| [customDomainsDisableCustomHttpsSample.ts][customdomainsdisablecustomhttpssample]                   | disable https delivery of the custom domain. x-ms-original-file: 2026-07-01/CustomDomains_DisableCustomHttps.json                                                                                                                                                                                                                                                                                                                                        |
| [customDomainsEnableCustomHttpsSample.ts][customdomainsenablecustomhttpssample]                     | enable https delivery of the custom domain. x-ms-original-file: 2026-07-01/CustomDomains_EnableCustomHttpsUsingBYOC.json                                                                                                                                                                                                                                                                                                                                 |
| [customDomainsGetSample.ts][customdomainsgetsample]                                                 | gets an existing custom domain within an endpoint. x-ms-original-file: 2026-07-01/CustomDomains_Get.json                                                                                                                                                                                                                                                                                                                                                 |
| [customDomainsListByEndpointSample.ts][customdomainslistbyendpointsample]                           | lists all of the existing custom domains within an endpoint. x-ms-original-file: 2026-07-01/CustomDomains_ListByEndpoint.json                                                                                                                                                                                                                                                                                                                            |
| [edgeNodesListSample.ts][edgenodeslistsample]                                                       | edgenodes are the global Point of Presence (POP) locations used to deliver CDN content to end users. x-ms-original-file: 2026-07-01/EdgeNodes_List.json                                                                                                                                                                                                                                                                                                  |
| [endpointsCreateSample.ts][endpointscreatesample]                                                   | creates a new CDN endpoint with the specified endpoint name under the specified subscription, resource group and profile. x-ms-original-file: 2026-07-01/Endpoints_Create.json                                                                                                                                                                                                                                                                           |
| [endpointsDeleteSample.ts][endpointsdeletesample]                                                   | deletes an existing CDN endpoint with the specified endpoint name under the specified subscription, resource group and profile. x-ms-original-file: 2026-07-01/Endpoints_Delete.json                                                                                                                                                                                                                                                                     |
| [endpointsGetSample.ts][endpointsgetsample]                                                         | gets an existing CDN endpoint with the specified endpoint name under the specified subscription, resource group and profile. x-ms-original-file: 2026-07-01/Endpoints_Get.json                                                                                                                                                                                                                                                                           |
| [endpointsListByProfileSample.ts][endpointslistbyprofilesample]                                     | lists existing CDN endpoints. x-ms-original-file: 2026-07-01/Endpoints_ListByProfile.json                                                                                                                                                                                                                                                                                                                                                                |
| [endpointsListResourceUsageSample.ts][endpointslistresourceusagesample]                             | checks the quota and usage of geo filters and custom domains under the given endpoint. x-ms-original-file: 2026-07-01/Endpoints_ListResourceUsage.json                                                                                                                                                                                                                                                                                                   |
| [endpointsLoadContentSample.ts][endpointsloadcontentsample]                                         | pre-loads a content to CDN. Available for Verizon Profiles. x-ms-original-file: 2026-07-01/Endpoints_LoadContent.json                                                                                                                                                                                                                                                                                                                                    |
| [endpointsPurgeContentSample.ts][endpointspurgecontentsample]                                       | removes a content from CDN. x-ms-original-file: 2026-07-01/Endpoints_PurgeContent.json                                                                                                                                                                                                                                                                                                                                                                   |
| [endpointsStartSample.ts][endpointsstartsample]                                                     | starts an existing CDN endpoint that is on a stopped state. x-ms-original-file: 2026-07-01/Endpoints_Start.json                                                                                                                                                                                                                                                                                                                                          |
| [endpointsStopSample.ts][endpointsstopsample]                                                       | stops an existing running CDN endpoint. x-ms-original-file: 2026-07-01/Endpoints_Stop.json                                                                                                                                                                                                                                                                                                                                                               |
| [endpointsUpdateSample.ts][endpointsupdatesample]                                                   | updates an existing CDN endpoint with the specified endpoint name under the specified subscription, resource group and profile. Only tags can be updated after creating an endpoint. To update origins, use the Update Origin operation. To update origin groups, use the Update Origin group operation. To update custom domains, use the Update Custom Domain operation. x-ms-original-file: 2026-07-01/Endpoints_Update.json                          |
| [endpointsValidateCustomDomainSample.ts][endpointsvalidatecustomdomainsample]                       | validates the custom domain mapping to ensure it maps to the correct CDN endpoint in DNS. x-ms-original-file: 2026-07-01/Endpoints_ValidateCustomDomain.json                                                                                                                                                                                                                                                                                             |
| [logAnalyticsGetLogAnalyticsLocationsSample.ts][loganalyticsgetloganalyticslocationssample]         | get all available location names for AFD log analytics report. x-ms-original-file: 2026-07-01/LogAnalytics_GetLogAnalyticsLocations.json                                                                                                                                                                                                                                                                                                                 |
| [logAnalyticsGetLogAnalyticsMetricsSample.ts][loganalyticsgetloganalyticsmetricssample]             | get log report for AFD profile x-ms-original-file: 2026-07-01/LogAnalytics_GetLogAnalyticsMetrics.json                                                                                                                                                                                                                                                                                                                                                   |
| [logAnalyticsGetLogAnalyticsRankingsSample.ts][loganalyticsgetloganalyticsrankingssample]           | get log analytics ranking report for AFD profile x-ms-original-file: 2026-07-01/LogAnalytics_GetLogAnalyticsRankings.json                                                                                                                                                                                                                                                                                                                                |
| [logAnalyticsGetLogAnalyticsResourcesSample.ts][loganalyticsgetloganalyticsresourcessample]         | get all endpoints and custom domains available for AFD log report x-ms-original-file: 2026-07-01/LogAnalytics_GetLogAnalyticsResources.json                                                                                                                                                                                                                                                                                                              |
| [logAnalyticsGetWafLogAnalyticsMetricsSample.ts][loganalyticsgetwafloganalyticsmetricssample]       | get Waf related log analytics report for AFD profile. x-ms-original-file: 2026-07-01/LogAnalytics_GetWafLogAnalyticsMetrics.json                                                                                                                                                                                                                                                                                                                         |
| [logAnalyticsGetWafLogAnalyticsRankingsSample.ts][loganalyticsgetwafloganalyticsrankingssample]     | get WAF log analytics charts for AFD profile x-ms-original-file: 2026-07-01/LogAnalytics_GetWafLogAnalyticsRankings.json                                                                                                                                                                                                                                                                                                                                 |
| [managedRuleSetsListSample.ts][managedrulesetslistsample]                                           | lists all available managed rule sets. x-ms-original-file: 2026-07-01/WafListManagedRuleSets.json                                                                                                                                                                                                                                                                                                                                                        |
| [operationsListSample.ts][operationslistsample]                                                     | list the operations for the provider x-ms-original-file: 2026-07-01/Operations_List.json                                                                                                                                                                                                                                                                                                                                                                 |
| [originGroupsCreateSample.ts][origingroupscreatesample]                                             | creates a new origin group within the specified endpoint. x-ms-original-file: 2026-07-01/OriginGroups_Create.json                                                                                                                                                                                                                                                                                                                                        |
| [originGroupsDeleteSample.ts][origingroupsdeletesample]                                             | deletes an existing origin group within an endpoint. x-ms-original-file: 2026-07-01/OriginGroups_Delete.json                                                                                                                                                                                                                                                                                                                                             |
| [originGroupsGetSample.ts][origingroupsgetsample]                                                   | gets an existing origin group within an endpoint. x-ms-original-file: 2026-07-01/OriginGroups_Get.json                                                                                                                                                                                                                                                                                                                                                   |
| [originGroupsListByEndpointSample.ts][origingroupslistbyendpointsample]                             | lists all of the existing origin groups within an endpoint. x-ms-original-file: 2026-07-01/OriginGroups_ListByEndpoint.json                                                                                                                                                                                                                                                                                                                              |
| [originGroupsUpdateSample.ts][origingroupsupdatesample]                                             | updates an existing origin group within an endpoint. x-ms-original-file: 2026-07-01/OriginGroups_Update.json                                                                                                                                                                                                                                                                                                                                             |
| [originsCreateSample.ts][originscreatesample]                                                       | creates a new origin within the specified endpoint. x-ms-original-file: 2026-07-01/Origins_Create.json                                                                                                                                                                                                                                                                                                                                                   |
| [originsDeleteSample.ts][originsdeletesample]                                                       | deletes an existing origin within an endpoint. x-ms-original-file: 2026-07-01/Origins_Delete.json                                                                                                                                                                                                                                                                                                                                                        |
| [originsGetSample.ts][originsgetsample]                                                             | gets an existing origin within an endpoint. x-ms-original-file: 2026-07-01/Origins_Get.json                                                                                                                                                                                                                                                                                                                                                              |
| [originsListByEndpointSample.ts][originslistbyendpointsample]                                       | lists all of the existing origins within an endpoint. x-ms-original-file: 2026-07-01/Origins_ListByEndpoint.json                                                                                                                                                                                                                                                                                                                                         |
| [originsUpdateSample.ts][originsupdatesample]                                                       | updates an existing origin within an endpoint. x-ms-original-file: 2026-07-01/Origins_Update.json                                                                                                                                                                                                                                                                                                                                                        |
| [policiesCreateOrUpdateSample.ts][policiescreateorupdatesample]                                     | create or update policy with specified rule set name within a resource group. x-ms-original-file: 2026-07-01/WafPolicyCreateOrUpdate.json                                                                                                                                                                                                                                                                                                                |
| [policiesDeleteSample.ts][policiesdeletesample]                                                     | deletes Policy x-ms-original-file: 2026-07-01/WafPolicyDelete.json                                                                                                                                                                                                                                                                                                                                                                                       |
| [policiesGetSample.ts][policiesgetsample]                                                           | retrieve protection policy with specified name within a resource group. x-ms-original-file: 2026-07-01/WafPolicyGet.json                                                                                                                                                                                                                                                                                                                                 |
| [policiesListSample.ts][policieslistsample]                                                         | lists all of the protection policies within a resource group. x-ms-original-file: 2026-07-01/WafListPolicies.json                                                                                                                                                                                                                                                                                                                                        |
| [policiesUpdateSample.ts][policiesupdatesample]                                                     | update an existing CdnWebApplicationFirewallPolicy with the specified policy name under the specified subscription and resource group x-ms-original-file: 2026-07-01/WafPatchPolicy.json                                                                                                                                                                                                                                                                 |
| [profilesCanMigrateSample.ts][profilescanmigratesample]                                             | checks if CDN profile can be migrated to Azure Frontdoor(Standard/Premium) profile. x-ms-original-file: 2026-07-01/Profiles_CanMigrate.json                                                                                                                                                                                                                                                                                                              |
| [profilesCdnCanMigrateToAfdSample.ts][profilescdncanmigratetoafdsample]                             | checks if CDN profile can be migrated to Azure Frontdoor(Standard/Premium) profile. x-ms-original-file: 2026-07-01/CdnProfiles_CanMigrate.json                                                                                                                                                                                                                                                                                                           |
| [profilesCdnMigrateToAfdSample.ts][profilescdnmigratetoafdsample]                                   | migrate the CDN profile to Azure Frontdoor(Standard/Premium) profile. This step prepares the profile for migration and will be followed by Commit to finalize the migration. x-ms-original-file: 2026-07-01/CdnProfiles_Migrate.json                                                                                                                                                                                                                     |
| [profilesCreateSample.ts][profilescreatesample]                                                     | creates a new Azure Front Door Standard or Azure Front Door Premium or CDN profile with a profile name under the specified subscription and resource group. x-ms-original-file: 2026-07-01/Profiles_Create.json                                                                                                                                                                                                                                          |
| [profilesDeleteSample.ts][profilesdeletesample]                                                     | deletes an existing Azure Front Door Standard or Azure Front Door Premium or CDN profile with the specified parameters. Deleting a profile will result in the deletion of all of the sub-resources including endpoints, origins and custom domains. x-ms-original-file: 2026-07-01/Profiles_Delete.json                                                                                                                                                  |
| [profilesGenerateSsoUriSample.ts][profilesgeneratessourisample]                                     | generates a dynamic SSO URI used to sign in to the CDN supplemental portal. Supplemental portal is used to configure advanced feature capabilities that are not yet available in the Azure portal, such as core reports in a standard profile; rules engine, advanced HTTP reports, and real-time stats and alerts in a premium profile. The SSO URI changes approximately every 10 minutes. x-ms-original-file: 2026-07-01/Profiles_GenerateSsoUri.json |
| [profilesGetSample.ts][profilesgetsample]                                                           | gets an Azure Front Door Standard or Azure Front Door Premium or CDN profile with the specified profile name under the specified subscription and resource group. x-ms-original-file: 2026-07-01/Profiles_Get.json                                                                                                                                                                                                                                       |
| [profilesListByResourceGroupSample.ts][profileslistbyresourcegroupsample]                           | lists all of the Azure Front Door Standard, Azure Front Door Premium, and CDN profiles within a resource group. x-ms-original-file: 2026-07-01/Profiles_ListByResourceGroup.json                                                                                                                                                                                                                                                                         |
| [profilesListResourceUsageSample.ts][profileslistresourceusagesample]                               | checks the quota and actual usage of endpoints under the given Azure Front Door Standard or Azure Front Door Premium or CDN profile. x-ms-original-file: 2026-07-01/Profiles_ListResourceUsage.json                                                                                                                                                                                                                                                      |
| [profilesListSample.ts][profileslistsample]                                                         | lists all of the Azure Front Door Standard, Azure Front Door Premium, and CDN profiles within an Azure subscription. x-ms-original-file: 2026-07-01/Profiles_List.json                                                                                                                                                                                                                                                                                   |
| [profilesListSupportedOptimizationTypesSample.ts][profileslistsupportedoptimizationtypessample]     | gets the supported optimization types for the current profile. A user can create an endpoint with an optimization type from the listed values. x-ms-original-file: 2026-07-01/Profiles_ListSupportedOptimizationTypes.json                                                                                                                                                                                                                               |
| [profilesMigrateSample.ts][profilesmigratesample]                                                   | migrate the CDN profile to Azure Frontdoor(Standard/Premium) profile. The change need to be committed after this. x-ms-original-file: 2026-07-01/Profiles_Migrate.json                                                                                                                                                                                                                                                                                   |
| [profilesMigrationAbortSample.ts][profilesmigrationabortsample]                                     | abort the migration to Azure Frontdoor Premium/Standard. x-ms-original-file: 2026-07-01/Profiles_MigrationAbort.json                                                                                                                                                                                                                                                                                                                                     |
| [profilesMigrationCommitSample.ts][profilesmigrationcommitsample]                                   | commit the migrated Azure Frontdoor(Standard/Premium) profile. x-ms-original-file: 2026-07-01/Profiles_MigrationCommit.json                                                                                                                                                                                                                                                                                                                              |
| [profilesUpdateSample.ts][profilesupdatesample]                                                     | updates an existing Azure Front Door Standard or Azure Front Door Premium or CDN profile with the specified profile name under the specified subscription and resource group. x-ms-original-file: 2026-07-01/Profiles_Update.json                                                                                                                                                                                                                        |
| [resourceUsageOperationsListSample.ts][resourceusageoperationslistsample]                           | check the quota and actual usage of the CDN profiles under the given subscription. x-ms-original-file: 2026-07-01/ResourceUsage_List.json                                                                                                                                                                                                                                                                                                                |
| [routesCreateSample.ts][routescreatesample]                                                         | creates a new route with the specified route name under the specified subscription, resource group, profile, and AzureFrontDoor endpoint. x-ms-original-file: 2026-07-01/Routes_Create.json                                                                                                                                                                                                                                                              |
| [routesDeleteSample.ts][routesdeletesample]                                                         | deletes an existing route with the specified route name under the specified subscription, resource group, profile, and AzureFrontDoor endpoint. x-ms-original-file: 2026-07-01/Routes_Delete.json                                                                                                                                                                                                                                                        |
| [routesGetSample.ts][routesgetsample]                                                               | gets an existing route with the specified route name under the specified subscription, resource group, profile, and AzureFrontDoor endpoint. x-ms-original-file: 2026-07-01/Routes_Get.json                                                                                                                                                                                                                                                              |
| [routesListByEndpointSample.ts][routeslistbyendpointsample]                                         | lists all of the existing origins within a profile. x-ms-original-file: 2026-07-01/Routes_ListByEndpoint.json                                                                                                                                                                                                                                                                                                                                            |
| [routesUpdateSample.ts][routesupdatesample]                                                         | updates an existing route with the specified route name under the specified subscription, resource group, profile, and AzureFrontDoor endpoint. x-ms-original-file: 2026-07-01/Routes_Update.json                                                                                                                                                                                                                                                        |
| [ruleSetsCreateSample.ts][rulesetscreatesample]                                                     | creates or update a batch rule set within the specified profile along with the rules associate to it. x-ms-original-file: 2026-07-01/RuleSets_Create.json                                                                                                                                                                                                                                                                                                |
| [ruleSetsDeleteSample.ts][rulesetsdeletesample]                                                     | deletes an existing AzureFrontDoor rule set with the specified rule set name under the specified subscription, resource group and profile. x-ms-original-file: 2026-07-01/RuleSets_Delete.json                                                                                                                                                                                                                                                           |
| [ruleSetsGetSample.ts][rulesetsgetsample]                                                           | gets an existing AzureFrontDoor rule set with the specified rule set name under the specified subscription, resource group and profile. x-ms-original-file: 2026-07-01/RuleSets_Get.json                                                                                                                                                                                                                                                                 |
| [ruleSetsListByProfileSample.ts][rulesetslistbyprofilesample]                                       | lists existing AzureFrontDoor rule sets within a profile. x-ms-original-file: 2026-07-01/RuleSets_ListByProfile.json                                                                                                                                                                                                                                                                                                                                     |
| [ruleSetsListResourceUsageSample.ts][rulesetslistresourceusagesample]                               | checks the quota and actual usage of endpoints under the given Azure Front Door profile. x-ms-original-file: 2026-07-01/RuleSets_ListResourceUsage.json                                                                                                                                                                                                                                                                                                  |
| [rulesCreateSample.ts][rulescreatesample]                                                           | creates a new delivery rule within the specified rule set. x-ms-original-file: 2026-07-01/Rules_Create.json                                                                                                                                                                                                                                                                                                                                              |
| [rulesDeleteSample.ts][rulesdeletesample]                                                           | deletes an existing delivery rule within a rule set. x-ms-original-file: 2026-07-01/Rules_Delete.json                                                                                                                                                                                                                                                                                                                                                    |
| [rulesGetSample.ts][rulesgetsample]                                                                 | gets an existing delivery rule within a rule set. x-ms-original-file: 2026-07-01/Rules_Get.json                                                                                                                                                                                                                                                                                                                                                          |
| [rulesListByRuleSetSample.ts][ruleslistbyrulesetsample]                                             | lists all of the existing delivery rules within a rule set. x-ms-original-file: 2026-07-01/Rules_ListByRuleSet.json                                                                                                                                                                                                                                                                                                                                      |
| [rulesUpdateSample.ts][rulesupdatesample]                                                           | updates an existing delivery rule within a rule set. x-ms-original-file: 2026-07-01/Rules_Update.json                                                                                                                                                                                                                                                                                                                                                    |
| [secretsCreateSample.ts][secretscreatesample]                                                       | creates a new Secret within the specified profile. x-ms-original-file: 2026-07-01/Secrets_Create.json                                                                                                                                                                                                                                                                                                                                                    |
| [secretsDeleteSample.ts][secretsdeletesample]                                                       | deletes an existing Secret within profile. x-ms-original-file: 2026-07-01/Secrets_Delete.json                                                                                                                                                                                                                                                                                                                                                            |
| [secretsGetSample.ts][secretsgetsample]                                                             | gets an existing Secret within a profile. x-ms-original-file: 2026-07-01/Secrets_Get.json                                                                                                                                                                                                                                                                                                                                                                |
| [secretsListByProfileSample.ts][secretslistbyprofilesample]                                         | lists existing AzureFrontDoor secrets. x-ms-original-file: 2026-07-01/Secrets_ListByProfile.json                                                                                                                                                                                                                                                                                                                                                         |
| [securityPoliciesCreateSample.ts][securitypoliciescreatesample]                                     | creates a new security policy within the specified profile. x-ms-original-file: 2026-07-01/SecurityPolicies_Create.json                                                                                                                                                                                                                                                                                                                                  |
| [securityPoliciesDeleteSample.ts][securitypoliciesdeletesample]                                     | deletes an existing security policy within profile. x-ms-original-file: 2026-07-01/SecurityPolicies_Delete.json                                                                                                                                                                                                                                                                                                                                          |
| [securityPoliciesGetSample.ts][securitypoliciesgetsample]                                           | gets an existing security policy within a profile. x-ms-original-file: 2026-07-01/SecurityPolicies_Get.json                                                                                                                                                                                                                                                                                                                                              |
| [securityPoliciesListByProfileSample.ts][securitypolicieslistbyprofilesample]                       | lists security policies associated with the profile x-ms-original-file: 2026-07-01/SecurityPolicies_ListByProfile.json                                                                                                                                                                                                                                                                                                                                   |
| [securityPoliciesPatchSample.ts][securitypoliciespatchsample]                                       | updates an existing security policy within a profile. x-ms-original-file: 2026-07-01/SecurityPolicies_Patch.json                                                                                                                                                                                                                                                                                                                                         |
| [validateProbeSample.ts][validateprobesample]                                                       | check if the probe path is a valid path and the file can be accessed. Probe path is the path to a file hosted on the origin server to help accelerate the delivery of dynamic content via the CDN endpoint. This path is relative to the origin path specified in the endpoint configuration. x-ms-original-file: 2026-07-01/ValidateProbe.json                                                                                                          |

## Prerequisites

The sample programs are compatible with [LTS versions of Node.js](https://github.com/nodejs/release#release-schedule).

Before running the samples in Node, they must be compiled to JavaScript using the TypeScript compiler. For more information on TypeScript, see the [TypeScript documentation][typescript]. Install the TypeScript compiler using:

```bash
npm install -g typescript
```

You need [an Azure subscription][freesub] to run these sample programs.

Samples retrieve credentials to access the service endpoint from environment variables. Alternatively, edit the source code to include the appropriate credentials. See each individual sample for details on which environment variables/credentials it requires to function.

Adapting the samples to run in the browser may require some additional consideration. For details, please see the [package README][package].

## Setup

To run the samples using the published version of the package:

1. Install the dependencies using `npm`:

```bash
npm install
```

2. Compile the samples:

```bash
npm run build
```

3. Edit the file `sample.env`, adding the correct credentials to access the Azure service and run the samples. Then rename the file from `sample.env` to just `.env`. The sample programs will read this file automatically.

4. Run whichever samples you like (note that some samples may require additional setup, see the table above):

```bash
node dist/afdCustomDomainsCreateSample.js
```

Alternatively, run a single sample with the required environment variables set (setting up the `.env` file is not required if you do this), for example (cross-platform):

```bash
node dist/afdCustomDomainsCreateSample.js
```

## Next Steps

Take a look at our [API Documentation][apiref] for more information about the APIs that are available in the clients.

[afdcustomdomainscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/afdCustomDomainsCreateSample.ts
[afdcustomdomainsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/afdCustomDomainsDeleteSample.ts
[afdcustomdomainsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/afdCustomDomainsGetSample.ts
[afdcustomdomainslistbyprofilesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/afdCustomDomainsListByProfileSample.ts
[afdcustomdomainsrefreshvalidationtokensample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/afdCustomDomainsRefreshValidationTokenSample.ts
[afdcustomdomainsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/afdCustomDomainsUpdateSample.ts
[afdendpointscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/afdEndpointsCreateSample.ts
[afdendpointsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/afdEndpointsDeleteSample.ts
[afdendpointsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/afdEndpointsGetSample.ts
[afdendpointslistbyprofilesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/afdEndpointsListByProfileSample.ts
[afdendpointslistresourceusagesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/afdEndpointsListResourceUsageSample.ts
[afdendpointspurgecontentsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/afdEndpointsPurgeContentSample.ts
[afdendpointsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/afdEndpointsUpdateSample.ts
[afdendpointsvalidatecustomdomainsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/afdEndpointsValidateCustomDomainSample.ts
[afdorigingroupscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/afdOriginGroupsCreateSample.ts
[afdorigingroupsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/afdOriginGroupsDeleteSample.ts
[afdorigingroupsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/afdOriginGroupsGetSample.ts
[afdorigingroupslistbyprofilesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/afdOriginGroupsListByProfileSample.ts
[afdorigingroupslistresourceusagesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/afdOriginGroupsListResourceUsageSample.ts
[afdorigingroupsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/afdOriginGroupsUpdateSample.ts
[afdoriginscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/afdOriginsCreateSample.ts
[afdoriginsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/afdOriginsDeleteSample.ts
[afdoriginsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/afdOriginsGetSample.ts
[afdoriginslistbyorigingroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/afdOriginsListByOriginGroupSample.ts
[afdoriginsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/afdOriginsUpdateSample.ts
[afdprofilescheckendpointnameavailabilitysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/afdProfilesCheckEndpointNameAvailabilitySample.ts
[afdprofilescheckhostnameavailabilitysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/afdProfilesCheckHostNameAvailabilitySample.ts
[afdprofileslistresourceusagesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/afdProfilesListResourceUsageSample.ts
[afdprofilesupgradesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/afdProfilesUpgradeSample.ts
[afdprofilesvalidatesecretsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/afdProfilesValidateSecretSample.ts
[checkendpointnameavailabilitysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/checkEndpointNameAvailabilitySample.ts
[checknameavailabilitysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/checkNameAvailabilitySample.ts
[checknameavailabilitywithsubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/checkNameAvailabilityWithSubscriptionSample.ts
[customdomainscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/customDomainsCreateSample.ts
[customdomainsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/customDomainsDeleteSample.ts
[customdomainsdisablecustomhttpssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/customDomainsDisableCustomHttpsSample.ts
[customdomainsenablecustomhttpssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/customDomainsEnableCustomHttpsSample.ts
[customdomainsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/customDomainsGetSample.ts
[customdomainslistbyendpointsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/customDomainsListByEndpointSample.ts
[edgenodeslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/edgeNodesListSample.ts
[endpointscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/endpointsCreateSample.ts
[endpointsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/endpointsDeleteSample.ts
[endpointsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/endpointsGetSample.ts
[endpointslistbyprofilesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/endpointsListByProfileSample.ts
[endpointslistresourceusagesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/endpointsListResourceUsageSample.ts
[endpointsloadcontentsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/endpointsLoadContentSample.ts
[endpointspurgecontentsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/endpointsPurgeContentSample.ts
[endpointsstartsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/endpointsStartSample.ts
[endpointsstopsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/endpointsStopSample.ts
[endpointsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/endpointsUpdateSample.ts
[endpointsvalidatecustomdomainsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/endpointsValidateCustomDomainSample.ts
[loganalyticsgetloganalyticslocationssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/logAnalyticsGetLogAnalyticsLocationsSample.ts
[loganalyticsgetloganalyticsmetricssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/logAnalyticsGetLogAnalyticsMetricsSample.ts
[loganalyticsgetloganalyticsrankingssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/logAnalyticsGetLogAnalyticsRankingsSample.ts
[loganalyticsgetloganalyticsresourcessample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/logAnalyticsGetLogAnalyticsResourcesSample.ts
[loganalyticsgetwafloganalyticsmetricssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/logAnalyticsGetWafLogAnalyticsMetricsSample.ts
[loganalyticsgetwafloganalyticsrankingssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/logAnalyticsGetWafLogAnalyticsRankingsSample.ts
[managedrulesetslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/managedRuleSetsListSample.ts
[operationslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/operationsListSample.ts
[origingroupscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/originGroupsCreateSample.ts
[origingroupsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/originGroupsDeleteSample.ts
[origingroupsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/originGroupsGetSample.ts
[origingroupslistbyendpointsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/originGroupsListByEndpointSample.ts
[origingroupsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/originGroupsUpdateSample.ts
[originscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/originsCreateSample.ts
[originsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/originsDeleteSample.ts
[originsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/originsGetSample.ts
[originslistbyendpointsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/originsListByEndpointSample.ts
[originsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/originsUpdateSample.ts
[policiescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/policiesCreateOrUpdateSample.ts
[policiesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/policiesDeleteSample.ts
[policiesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/policiesGetSample.ts
[policieslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/policiesListSample.ts
[policiesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/policiesUpdateSample.ts
[profilescanmigratesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/profilesCanMigrateSample.ts
[profilescdncanmigratetoafdsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/profilesCdnCanMigrateToAfdSample.ts
[profilescdnmigratetoafdsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/profilesCdnMigrateToAfdSample.ts
[profilescreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/profilesCreateSample.ts
[profilesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/profilesDeleteSample.ts
[profilesgeneratessourisample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/profilesGenerateSsoUriSample.ts
[profilesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/profilesGetSample.ts
[profileslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/profilesListByResourceGroupSample.ts
[profileslistresourceusagesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/profilesListResourceUsageSample.ts
[profileslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/profilesListSample.ts
[profileslistsupportedoptimizationtypessample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/profilesListSupportedOptimizationTypesSample.ts
[profilesmigratesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/profilesMigrateSample.ts
[profilesmigrationabortsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/profilesMigrationAbortSample.ts
[profilesmigrationcommitsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/profilesMigrationCommitSample.ts
[profilesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/profilesUpdateSample.ts
[resourceusageoperationslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/resourceUsageOperationsListSample.ts
[routescreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/routesCreateSample.ts
[routesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/routesDeleteSample.ts
[routesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/routesGetSample.ts
[routeslistbyendpointsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/routesListByEndpointSample.ts
[routesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/routesUpdateSample.ts
[rulesetscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/ruleSetsCreateSample.ts
[rulesetsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/ruleSetsDeleteSample.ts
[rulesetsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/ruleSetsGetSample.ts
[rulesetslistbyprofilesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/ruleSetsListByProfileSample.ts
[rulesetslistresourceusagesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/ruleSetsListResourceUsageSample.ts
[rulescreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/rulesCreateSample.ts
[rulesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/rulesDeleteSample.ts
[rulesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/rulesGetSample.ts
[ruleslistbyrulesetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/rulesListByRuleSetSample.ts
[rulesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/rulesUpdateSample.ts
[secretscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/secretsCreateSample.ts
[secretsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/secretsDeleteSample.ts
[secretsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/secretsGetSample.ts
[secretslistbyprofilesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/secretsListByProfileSample.ts
[securitypoliciescreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/securityPoliciesCreateSample.ts
[securitypoliciesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/securityPoliciesDeleteSample.ts
[securitypoliciesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/securityPoliciesGetSample.ts
[securitypolicieslistbyprofilesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/securityPoliciesListByProfileSample.ts
[securitypoliciespatchsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/securityPoliciesPatchSample.ts
[validateprobesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/typescript/src/validateProbeSample.ts
[apiref]: https://learn.microsoft.com/javascript/api/@azure/arm-cdn
[freesub]: https://azure.microsoft.com/free/
[package]: https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/cdn/arm-cdn/README.md
[typescript]: https://www.typescriptlang.org/docs/home.html
